@@ -37,6 +37,7 @@ POSSIBILITY OF SUCH DAMAGE.
 #include "libtorrent/socket_io.hpp"
 #include "libtorrent/error.hpp"
 #include "libtorrent/string_util.hpp" // for allocate_string_copy
+#include "libtorrent/broadcast_socket.hpp" // for is_any
 #include <stdlib.h>
 #include <boost/bind.hpp>
 #include <boost/array.hpp>
@@ -704,14 +705,19 @@ void udp_socket::bind(udp::endpoint const& ep, error_code& ec)
 		if (ec) return;
 		setup_read(&m_ipv4_sock);
 	}
+
 #if TORRENT_USE_IPV6
-	else
+	if (ep.address().is_v6() || is_any(ep.address()))
 	{
+		udp::endpoint ep6 = ep;
+		if (is_any(ep.address())) ep6.address(address_v6::any());
+		m_ipv6_sock.open(udp::v6(), ec);
+		if (ec) return;
 #ifdef IPV6_V6ONLY
 		m_ipv6_sock.set_option(v6only(true), ec);
 		if (ec) return;
 #endif
-		m_ipv6_sock.bind(ep, ec);
+		m_ipv6_sock.bind(ep6, ec);
 		if (ec) return;
 		udp::socket::non_blocking_io ioc(true);
 		m_ipv6_sock.io_control(ioc, ec);
